changed header fonts and added background image overlay

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,6 @@
 
 .title {
-    font-family: 'Coda Caption', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 50px;
     font-stretch: extra-expanded;
     outline: black;
