--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
 
+.backgroundImage {
+  background: 
+  linear-gradient(
+    rgba(0, 0, 0, 0.45), 
+    rgba(0, 0, 0, 0.45)
+  ),
+  /* bottom, image */
+  url(./images/option7.jpg);
+}
