--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -8,7 +8,7 @@ body {
 }
 
 h5 {
-    font-family: 'Coda Caption', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-stretch: extra-expanded;
     outline: black;
     outline-offset: 2px;
