--- a/src/components/login/styles.css
+++ b/src/components/login/styles.css
@@ -1,5 +1,5 @@
 h1 {
-    font-family: 'Coda Caption', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 50px;
     font-stretch: extra-expanded;
     outline: black;
