--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
-
 .backgroundImage {
-  background: 
-  linear-gradient(
-    rgba(0, 0, 0, 0.45), 
-    rgba(0, 0, 0, 0.45)
-  ),
-  /* bottom, image */
-  url(./images/option7.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+        /* bottom, image */ url(./images/option7.jpg);
+    min-height: 100vh;
 }
